# todolist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build_and_deploy.yaml  build_and_deploy_to_main.yaml
bot/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_remove_tguser_tg_user_id_tguser_tg_user_phone.py  0003_remove_tguser_tg_user_phone_tguser_tg_username.py  0004_rename_db_user_tguser_user.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
deploy/: .env  docker-compose.yaml  nginx.conf
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal_comments.py  0003_rename_deadline_goal_due_date.py  0004_alter_goal_category_alter_goal_comments_and_more.py  0005_alter_goal_comments.py  0006_remove_goal_comments_alter_goalcomment_goal.py  0007_board_goalcategory_board_boardparticipant.py  0008_create_new_objects.py  0009_alter_goalcategory_board.py
tests/: test_category.py  test_comment.py
tests/core/: user_test.py
tests/goals/: board_test.py  category_test.py  comment_test.py  goal_test.py
todolist/: settings.py  urls.py
